cmake_minimum_required(VERSION 3.26)
project(ShatteredDungeon)

include_directories(E:\\easyX\\include)
link_directories(E:\\easyX\\lib64)
link_libraries(libeasyx.a)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")

include_directories(src/code/class)

add_executable(ShatteredDungeon
        src/code/class/launch/GameWindow.cpp
        src/code/class/launch/GameWindow.h
        src/code/class/map/Map.cpp
        src/code/class/map/Map.h
        src/code/class/map/MapGenerator.cpp
        src/code/class/map/MapGenerator.h
        src/code/class/map/Point.cpp
        src/code/class/map/Point.h
        src/code/class/map/room.cpp
        src/code/class/map/room.h
        src/code/main.cpp
        src/code/class/entity/Player.cpp
        src/code/class/entity/Player.h
        src/code/class/attr.h
        src/code/class/launch/GameCore.cpp
        src/code/class/launch/GameCore.h
        src/code/class/entity/player/Warrior.cpp
        src/code/class/entity/player/Warrior.h
        src/code/class/entity/player/Mage.cpp
        src/code/class/entity/player/Mage.h
        src/code/class/entity/player/Rogue.cpp
        src/code/class/entity/player/Rogue.h
        src/code/class/entity/player/Huntress.cpp
        src/code/class/entity/player/Huntress.h
        src/code/class/entity/player/Duelist.cpp
        src/code/class/entity/player/Duelist.h
        src/code/class/items/Armor.cpp
        src/code/class/items/Armor.h
        src/code/class/items/armor/ClothArmor.cpp
        src/code/class/items/armor/ClothArmor.h
        src/code/class/items/armor/LeatherArmor.cpp
        src/code/class/items/armor/LeatherArmor.h
        src/code/class/items/armor/MailArmor.cpp
        src/code/class/items/armor/MailArmor.h
        src/code/class/items/armor/ScaleArmor.cpp
        src/code/class/items/armor/ScaleArmor.h
        src/code/class/items/armor/PlateArmor.cpp
        src/code/class/items/armor/PlateArmor.h
        src/code/class/items/weapon/meleeWeapon/WornShortsword.cpp
        src/code/class/items/weapon/meleeWeapon/WornShortsword.h
        src/code/class/items/weapon/meleeWeapon/MeleeWeapon.cpp
        src/code/class/items/weapon/meleeWeapon/MeleeWeapon.h
        src/code/class/items/Item.cpp
        src/code/class/items/Item.h
        src/code/class/entity/Entity.cpp
        src/code/class/entity/Entity.h
        src/code/class/launch/DataCenter.cpp
        src/code/class/launch/DataCenter.h
        src/code/class/items/Weapon.cpp
        src/code/class/items/Weapon.h
        src/code/class/items/Artifact.cpp
        src/code/class/items/Artifact.h
        src/code/class/items/Ring.cpp
        src/code/class/items/Ring.h
        src/code/class/items/artifact/AlchemistsToolkit.cpp
        src/code/class/items/artifact/AlchemistsToolkit.h
        src/code/class/items/artifact/ChaliceOfBlood.cpp
        src/code/class/items/artifact/ChaliceOfBlood.h
        src/code/class/items/artifact/CloakOfShadows.cpp
        src/code/class/items/artifact/CloakOfShadows.h
        src/code/class/items/artifact/DriedRose.cpp
        src/code/class/items/artifact/DriedRose.h
        src/code/class/items/artifact/EtherealChains.cpp
        src/code/class/items/artifact/EtherealChains.h
        src/code/class/items/artifact/HornOfPlenty.cpp
        src/code/class/items/artifact/HornOfPlenty.h
        src/code/class/items/artifact/MasterThievesArmband.cpp
        src/code/class/items/artifact/MasterThievesArmband.h
        src/code/class/items/artifact/SandalsOfNature.cpp
        src/code/class/items/artifact/SandalsOfNature.h
        src/code/class/items/artifact/TalismanOfForesight.cpp
        src/code/class/items/artifact/TalismanOfForesight.h
        src/code/class/items/artifact/TimekeepersHourglass.cpp
        src/code/class/items/artifact/TimekeepersHourglass.h
        src/code/class/items/artifact/UnstableSpellbook.cpp
        src/code/class/items/artifact/UnstableSpellbook.h
        src/code/class/items/potion.cpp
        src/code/class/items/potion.h
        src/code/class/items/potion/Strength.cpp
        src/code/class/items/potion/Strength.h
        src/code/class/items/potion/MindVision.cpp
        src/code/class/items/potion/MindVision.h
        src/code/class/items/potion/Purity.cpp
        src/code/class/items/potion/Purity.h
        src/code/class/items/potion/Healing.cpp
        src/code/class/items/potion/Healing.h
        src/code/class/items/potion/Frost.cpp
        src/code/class/items/potion/Frost.h
        src/code/class/items/potion/LiquidFlame.cpp
        src/code/class/items/potion/LiquidFlame.h
        src/code/class/items/potion/ToxicGas.cpp
        src/code/class/items/potion/ToxicGas.h
        src/code/class/items/potion/Haste.cpp
        src/code/class/items/potion/Haste.h
        src/code/class/items/potion/Invisibility.cpp
        src/code/class/items/potion/Invisibility.h
        src/code/class/items/potion/Levitation.cpp
        src/code/class/items/potion/Levitation.h
        src/code/class/items/potion/ParalyticGas.cpp
        src/code/class/items/potion/ParalyticGas.h
        src/code/class/items/potion/Experience.cpp
        src/code/class/items/potion/Experience.h
        src/code/class/items/ring/Accuracy.cpp
        src/code/class/items/ring/Accuracy.h
        src/code/class/items/ring/Arcana.cpp
        src/code/class/items/ring/Arcana.h
        src/code/class/items/ring/Elements.cpp
        src/code/class/items/ring/Elements.h
        src/code/class/items/ring/Energy.cpp
        src/code/class/items/ring/Energy.h
        src/code/class/items/ring/Evasion.cpp
        src/code/class/items/ring/Evasion.h
        src/code/class/items/ring/Force.cpp
        src/code/class/items/ring/Force.h
        src/code/class/items/ring/Furor.cpp
        src/code/class/items/ring/Furor.h
        src/code/class/items/ring/Haste.cpp
        src/code/class/items/ring/Haste.h
        src/code/class/items/ring/Might.cpp
        src/code/class/items/ring/Might.h
        src/code/class/items/ring/Sharpshooting.cpp
        src/code/class/items/ring/Sharpshooting.h
        src/code/class/items/ring/Tenacity.cpp
        src/code/class/items/ring/Tenacity.h
        src/code/class/items/ring/Wealth.cpp
        src/code/class/items/ring/Wealth.h
        src/code/class/items/Scroll.cpp
        src/code/class/items/Scroll.h
        src/code/class/items/scroll/Upgrade.cpp
        src/code/class/items/scroll/Upgrade.h
        src/code/class/items/scroll/Identify.cpp
        src/code/class/items/scroll/Identify.h
        src/code/class/items/scroll/RemoveCurse.cpp
        src/code/class/items/scroll/RemoveCurse.h
        src/code/class/items/scroll/Lullaby.cpp
        src/code/class/items/scroll/Lullaby.h
        src/code/class/items/scroll/MirrorImage.cpp
        src/code/class/items/scroll/MirrorImage.h
        src/code/class/items/scroll/Recharging.cpp
        src/code/class/items/scroll/Recharging.h
        src/code/class/items/scroll/Teleportation.cpp
        src/code/class/items/scroll/Teleportation.h
        src/code/class/items/scroll/MagicMapping.cpp
        src/code/class/items/scroll/MagicMapping.h
        src/code/class/items/scroll/Rage.cpp
        src/code/class/items/scroll/Rage.h
        src/code/class/items/scroll/Retribution.cpp
        src/code/class/items/scroll/Retribution.h
        src/code/class/items/scroll/Terror.cpp
        src/code/class/items/scroll/Terror.h
        src/code/class/items/scroll/Transmutation.cpp
        src/code/class/items/scroll/Transmutation.h
        src/code/class/entity/enemy/Rat.cpp
        src/code/class/entity/enemy/Rat.h
        src/code/class/entity/Enemy.cpp
        src/code/class/entity/Enemy.h
        src/code/class/items/ItemStack.cpp
        src/code/class/items/ItemStack.h
        src/code/class/items/weapon/ThrowingWeapon.cpp
        src/code/class/items/weapon/ThrowingWeapon.h
        src/code/class/tools/Log.cpp
        src/code/class/tools/Log.h
        src/code/class/tools/Usages.cpp
        src/code/class/tools/Usages.cpp
        src/code/class/tools/Usages.h
)